//protocol=1519;
option java_package = "com.chuangyou.common.protobuf.pb";
option java_outer_classname = "PlayerMoveBoardcastProto";

import "common/PBVector3.proto";

message PlayerMoveBoardcastMsg {
	optional int64 id= 1;    //玩家id
	optional PBVector3 cur = 2; //当前位置
	optional PBVector3 tar = 3; //目标位置
	optional int64 preArriveTargetServerTime = 4; //服务端当前时间戳
}